--- a/portfolio-ambitious/index.html
+++ b/portfolio-ambitious/index.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   </head>
 
-  <body class="bg-[#e9e4de] text-[#040433] text-[1em] pt-[6vw]">
-    <nav class="flex flex-row items-center justify-between w-full py-[10px] px-[20px] bg-[#e9e4de] md:fixed top-0 left-0 z-100">
-      <a href="/" class="flex flex-row items-center p-0 group">
+  <body class="bg-[#e9e4de] text-[#040433] text-[1em]">
+    <nav id="nav" class="flex flex-row items-center justify-between w-full py-[10px] px-[20px] top-0 left-0 z-100 bg-[#e9e4de] md:fixed">
+      <a href="/" class="flex flex-row items-center p-0 group" id="logo">
         <figure class="p-0">
           <svg x="0px" y="0px" viewBox="0 0 260.6 261.1" class="fill-red-400 w-[100px] h-[100px] lg:w-[6vw] lg:h-[6vw] hover:fill-red-700 group-hover:ease-in group-hover:duration-200">
             <path
@@ -55,111 +55,121 @@
         </li>
       </ul>
     </nav>
+    <div id="smooth-wrapper">
+      <div id="smooth-content">
+        <div class="flex flex-col p-[20px] md:px-[4vw] md:pb-[6vw] md:pt-[12vw] md:text-center md:items-center">
+          <p class="text-lg">August 2023 - Jan 2025</p>
+          <h1 class="text-3xl md:text-8xl py-[4vw]">Jnr. <span>Web Developer</span> @ Ambitious Aotearoa</h1>
+          <p class="md:px-[4vw] text-balance">
+            After completing my web developer training at Dev Academy and gaining hands-on experience at Spotzer, I accepted a junior web developer position at Ambitious Aotearoa, a dynamic digital marketing agency on Tory Street. This role allowed me to apply and grow my technical skills while
+            contributing to a variety of projects, collaborating with talented designers, and building solutions that met both client and user needs.
+          </p>
+        </div>
 
-    <div class="flex flex-col p-[20px] md:px-[4vw] md:py-[6vw] md:text-center md:items-center">
-      <p class="text-lg">August 2023 - Jan 2025</p>
-      <h1 class="text-3xl md:text-8xl py-[4vw]">Jnr. <span>Web Developer</span> @ Ambitious Aotearoa</h1>
-      <p class="md:px-[4vw] text-balance">
-        After completing my web developer training at Dev Academy and gaining hands-on experience at Spotzer, I accepted a junior web developer position at Ambitious Aotearoa, a dynamic digital marketing agency on Tory Street. This role allowed me to apply and grow my technical skills while
-        contributing to a variety of projects, collaborating with talented designers, and building solutions that met both client and user needs.
-      </p>
-    </div>
-
-    <div class="swiper mySwiper mt-[4vw]">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide">
-          <img src="/img/gentledental.webp" alt="Website hero image for Gentle Dental" />
-        </div>
-        <div class="swiper-slide">
-          <img src="/img/urbanhub.webp" alt="Website hero image for Urban Hub" />
-        </div>
-        <div class="swiper-slide">
-          <img src="/img/fenestra.webp" alt="Website hero image for Fenestra" />
-        </div>
-        <div class="swiper-slide">
-          <img src="/img/wellyfun.webp" alt="Website hero image for Wellyfun" />
-        </div>
-        <div class="swiper-slide">
-          <img src="/img/Pitchdeck.webp" alt="Website hero image for PitchDeck" />
-        </div>
-        <div class="swiper-slide">
-          <img src="/img/LGcreative.webp" alt="Website hero image for LG Creative" />
-        </div>
-      </div>
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
-    </div>
-
-    <section class="p-[20px] md:px-[6vw] md:py-[8vw]">
-      <div class="w-full md:w-[70%]">
-        <h2 class="text-2xl md:text-7xl py-[4vw]">Ambitious <span>Collaboration</span></h2>
-        <p class="text-balance">
-          A key part of my role involved collaborating closely with designers to interpret and bring their visions to life. I translated Figma and Adobe designs into responsive, interactive web applications, ensuring the user experience (UX) remained seamless and intuitive. By maintaining open
-          communication, I helped refine designs when necessary and ensured technical feasibility without compromising creative intent.
-        </p>
-      </div>
-
-      <div class="w-full md:ps-[30%] mt-[6vw]">
-        <div class="ps-[1vw]">
-          <div class="w-full">
-            <img src="/img/fenestra.webp" alt="Website hero image for Fenestra" class="w-[100%]" />
+        <div class="swiper mySwiper mt-[4vw]">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="/img/gentledental.webp" alt="Website hero image for Gentle Dental" />
+            </div>
+            <div class="swiper-slide">
+              <img src="/img/urbanhub.webp" alt="Website hero image for Urban Hub" />
+            </div>
+            <div class="swiper-slide">
+              <img src="/img/fenestra.webp" alt="Website hero image for Fenestra" />
+            </div>
+            <div class="swiper-slide">
+              <img src="/img/wellyfun.webp" alt="Website hero image for Wellyfun" />
+            </div>
+            <div class="swiper-slide">
+              <img src="/img/Pitchdeck.webp" alt="Website hero image for PitchDeck" />
+            </div>
+            <div class="swiper-slide">
+              <img src="/img/LGcreative.webp" alt="Website hero image for LG Creative" />
+            </div>
           </div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+        </div>
 
-          <div class="w-full pt-[6vw]">
-            <h2 class="text-2xl md:text-7xl py-[4vw]">Ambitious <span>Crafting</span></h2>
-            <p>
-              During this time, I discovered Craft CMS and Craft Commerce — and quickly fell in love with their flexibility and powerful features. Craft CMS is an excellent choice for building highly customizable websites, offering a clean and intuitive user interface for content management. It
-              allows developers to create tailored experiences for clients, providing granular control over both front-end design and back-end functionality. Craft Commerce extends this even further, making it ideal for scalable and personalized eCommerce solutions.
+        <section class="p-[20px] md:px-[6vw] md:py-[8vw]">
+          <div class="w-full md:w-[70%]">
+            <h2 class="text-2xl md:text-7xl py-[4vw]">Ambitious <span>Collaboration</span></h2>
+            <p class="text-balance">
+              A key part of my role involved collaborating closely with designers to interpret and bring their visions to life. I translated Figma and Adobe designs into responsive, interactive web applications, ensuring the user experience (UX) remained seamless and intuitive. By maintaining open
+              communication, I helped refine designs when necessary and ensured technical feasibility without compromising creative intent.
             </p>
           </div>
+
+          <div class="w-full md:ps-[30%] mt-[6vw]" id="ambitious-pin">
+            <div class="ps-[1vw]">
+              <a href="https://www.ambitious.co.nz/" target="_blank" class="w-full h-full md:h-[38vw] overflow-hidden flex flex-col">
+                <img src="/img/ambitious-full.webp" alt="Website hero image for Ambitious" class="w-full" />
+              </a>
+              <p class="text-right pt-[10px] md:pt-[.8vw]"><a href="https://www.ambitious.co.nz/" target="_blank" class="hover:text-red-700 hover:duration-200 hover:ease-in-out">Visit the Ambitious website, built with Webflow</a></p>
+
+              <div class="w-full pt-[6vw]">
+                <h2 class="text-2xl md:text-7xl py-[4vw]">Ambitious <span>Crafting</span></h2>
+                <p>
+                  During this time, I discovered Craft CMS and Craft Commerce — and quickly fell in love with their flexibility and powerful features. Craft CMS is an excellent choice for building highly customizable websites, offering a clean and intuitive user interface for content management. It
+                  allows developers to create tailored experiences for clients, providing granular control over both front-end design and back-end functionality. Craft Commerce extends this even further, making it ideal for scalable and personalized eCommerce solutions.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="flex flex-col md:flex-row md:flex-wrap mt-[4vw]">
+            <div class="w-full md:w-[30%] mt-[6vw] md:pe-[1vw]">
+              <img src="/img/fenestra.webp" alt="Website hero image for Fenestra" class="w-[100%]" />
+              <img src="/img/fenestra.webp" alt="Website hero image for Fenestra" class="w-[100%]" />
+            </div>
+            <div class="w-full md:w-[70%] mt-[6vw] md:ps-[1vw]">
+              <img src="/img/fenestra.webp" alt="Website hero image for Fenestra" class="w-[100%]" />
+            </div>
+          </div>
+
+          <div class="w-full md:w-[70%] mt-[4vw]">
+            <h2 class="text-2xl md:text-7xl py-[4vw]">Ambitious <span>Coding</span></h2>
+            <p class="text-balance">
+              Working with Craft CMS has deepened my understanding of PHP, Twig templating, and efficient content modeling. I've enjoyed creating modular and reusable components, optimizing performance, and ensuring seamless user experiences for both site visitors and content managers.
+            </p>
+            <p class="mt-[20px] md:mt-[2vw]">
+              When I wasn’t working with Craft CMS, I built websites using Webflow, taking advantage of its user-friendly CMS to empower clients to manage their own content. For custom projects I'd build from scratch, using Bootstrap/Tailwind and jQuery (an sometimes GSAP!) to create responsive,
+              visually engaging sites.
+            </p>
+          </div>
+
+          <div class="flex flex-col md:flex-row md:flex-wrap mt-[4vw]">
+            <div class="w-full md:w-[70%] mt-[6vw] md:pe-[1vw]">
+              <img src="/img/fenestra.webp" alt="Website hero image for Fenestra" class="w-[100%]" />
+            </div>
+            <div class="w-full md:w-[30%] mt-[6vw] md:ps-[1vw]">
+              <img src="/img/fenestra.webp" alt="Website hero image for Fenestra" class="w-[100%]" />
+            </div>
+          </div>
+        </section>
+
+        <div class="flex flex-row justify-end w-full p-[20px] md:px-[6vw]">
+          <a href="/" class="inline-flex p-0 group items-center" aria-label="Anchor tag to home page">
+            <p>Jennifer Harper &copy; <span id="year"></span></p>
+            <figure class="p-0 ms-[10px] md:ms-[1vw]">
+              <svg x="0px" y="0px" viewBox="0 0 260.6 261.1" class="fill-red-700 w-[100px] h-[100px] lg:w-[3vw] lg:h-[3vw] group-hover:fill-red-400 group-hover:ease-in group-hover:duration-200">
+                <path
+                  d="M130.3,3.6C60.3,3.6,3.6,60.8,3.6,130.8s56.7,126.7,126.7,126.7S257,200.8,257,130.8S200.3,3.6,130.3,3.6z M114.4,68.8h31.8 v91.7h-31.8V68.8z M72,68.8h31.8v22.3H72C72,91,72,68.8,72,68.8z M103.8,163.2c0,9.6-2.1,16.4-5.8,21.2c-4.2,5.3-11.7,8-21.2,8H72 v-91.7h31.8L103.8,163.2L103.8,163.2z M188.6,192.9h-74.2v-21.7h74.2V192.9z M188.6,161h-32.4v-60.4h5.3c14.3,0,22.8,4.8,26,14.8 c1.1,3.2,1.6,6.9,1.6,11.1V161H188.6z"
+                />
+              </svg>
+            </figure>
+          </a>
         </div>
       </div>
-
-      <div class="flex flex-col md:flex-row md:flex-wrap mt-[4vw]">
-        <div class="w-full md:w-[30%] mt-[6vw] md:pe-[1vw]">
-          <img src="/img/fenestra.webp" alt="Website hero image for Fenestra" class="w-[100%]" />
-          <img src="/img/fenestra.webp" alt="Website hero image for Fenestra" class="w-[100%]" />
-        </div>
-        <div class="w-full md:w-[70%] mt-[6vw] md:ps-[1vw]">
-          <img src="/img/fenestra.webp" alt="Website hero image for Fenestra" class="w-[100%]" />
-        </div>
-      </div>
-
-      <div class="w-full md:w-[70%] mt-[4vw]">
-        <h2 class="text-2xl md:text-7xl py-[4vw]">Ambitious <span>Coding</span></h2>
-        <p class="text-balance">
-          Working with Craft CMS has deepened my understanding of PHP, Twig templating, and efficient content modeling. I've enjoyed creating modular and reusable components, optimizing performance, and ensuring seamless user experiences for both site visitors and content managers.
-        </p>
-        <p class="mt-[20px] md:mt-[2vw]">
-          When I wasn’t working with Craft CMS, I built websites using Webflow, taking advantage of its user-friendly CMS to empower clients to manage their own content. For custom projects I'd build from scratch, using Bootstrap/Tailwind and jQuery (an sometimes GSAP!) to create responsive,
-          visually engaging sites.
-        </p>
-      </div>
-
-      <div class="flex flex-col md:flex-row md:flex-wrap mt-[4vw]">
-        <div class="w-full md:w-[70%] mt-[6vw] md:pe-[1vw]">
-          <img src="/img/fenestra.webp" alt="Website hero image for Fenestra" class="w-[100%]" />
-        </div>
-        <div class="w-full md:w-[30%] mt-[6vw] md:ps-[1vw]">
-          <img src="/img/fenestra.webp" alt="Website hero image for Fenestra" class="w-[100%]" />
-        </div>
-      </div>
-    </section>
-
-    <div class="flex flex-row justify-end w-full p-[20px] md:px-[6vw]">
-      <a href="/" class="inline-flex p-0 group items-center" aria-label="Anchor tag to home page">
-        <p>Jennifer Harper &copy; <span id="year"></span></p>
-        <figure class="p-0 ms-[10px] md:ms-[1vw]">
-          <svg x="0px" y="0px" viewBox="0 0 260.6 261.1" class="fill-red-700 w-[100px] h-[100px] lg:w-[3vw] lg:h-[3vw] group-hover:fill-red-400 group-hover:ease-in group-hover:duration-200">
-            <path
-              d="M130.3,3.6C60.3,3.6,3.6,60.8,3.6,130.8s56.7,126.7,126.7,126.7S257,200.8,257,130.8S200.3,3.6,130.3,3.6z M114.4,68.8h31.8 v91.7h-31.8V68.8z M72,68.8h31.8v22.3H72C72,91,72,68.8,72,68.8z M103.8,163.2c0,9.6-2.1,16.4-5.8,21.2c-4.2,5.3-11.7,8-21.2,8H72 v-91.7h31.8L103.8,163.2L103.8,163.2z M188.6,192.9h-74.2v-21.7h74.2V192.9z M188.6,161h-32.4v-60.4h5.3c14.3,0,22.8,4.8,26,14.8 c1.1,3.2,1.6,6.9,1.6,11.1V161H188.6z"
-            />
-          </svg>
-        </figure>
-      </a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/CustomEase.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="../js/ScrollSmoother.min.js"></script>
+    <script src="../js/gsap.js"></script>
     <script src="../js/script.js"></script>
   </body>
 </html>
