--- a/portfolio-spotzer/index.html
+++ b/portfolio-spotzer/index.html
@@ -56,7 +56,7 @@
     <main>
       <section class="" id="hero">
         <div class="flex flex-col p-[20px] md:px-[4vw] md:py-[6vw] text-center items-center">
-          <h1 class="pb-[4vw] text-3xl md:text-7xl lg:text-9xl leading-[1.1]">Web<br /><span> Designer</span> @ Spotzer Digital</h1>
+          <h1 class="pb-[4vw] text-3xl md:text-8xl leading-[1.1] text-pretty">Web<span> Designer</span> <br />@ Spotzer Digital</h1>
           <p class="md:w-[80%]">
             From August 2017 to December 2021 I worked as a Web Designer at Spotzer, an award winning digital marketing company based in Amsterdam. My position as a Intermediate Web Designer included responsibilities such as establishing design guidelines, promoting best practices within the
             business, training offshore vendors, providing QA feedback and iterating the digital products we built, on platforms such as Wordpress, Webflow and Wix
@@ -67,7 +67,7 @@
       <section class="bg-[#040433] text-white flex flex-col items-center pb-[20px] md:pb-[6vw] md:mb-[6vw]">
         <div class="flex flex-col p-[20px] md:px-[4vw] md:py-[6vw] text-center items-center">
           <p class="text-lg">2017 - 2022</p>
-          <h2 class="text-3xl md:text-8xl pb-[4vw]">Career <br /><span>Highlights</span></h2>
+          <h2 class="text-3xl md:text-7xl pb-[4vw]">Career <br /><span>Highlights</span></h2>
           <p class="md:w-[80%]">
             As I grew towards becoming a Senior Designer within the company, I was given the opportunity to work on in house projects. Over time I worked directly with senior management in developing and rebranding our company's identity, as well as being the lead designer on the two project
             examples below.
