--- a/alastair_upton/index.html
+++ b/alastair_upton/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   </head>
 
-  <body class="text-[1em] lg:py-[2vw]">
+  <body class="text-[1em] lg:pt-[2vw]">
     <nav id="nav" class="lg:w-[10vw] lg:h-screen lg:border-e lg-border-black p-5 md:-10 top-0 left-0 z-100 lg:fixed flex flex-row lg:flex-col justify-end">
       <a href="/" class="flex flex-row items-center p-0 group" id="logo" aria-label="Return to home anchor link">
         <figure class="p-0 w-full max-w-[9vw]">
@@ -33,10 +33,88 @@
         </div>
       </section>
 
-      <section id="sandhaimedu">
-        <div class="flex flex-col lg:flex-row justify-between mb-5 md:mb-10 lg:mb-[2vw] lg:items-end">
+      <section id="macmillian_ave">
+        <div class="flex flex-col lg:flex-row justify-between mt-10 lg:mt-[8vw] mb-5 md:mb-10 lg:mb-[2vw] lg:items-end">
           <div class="lg:max-w-[45vw]">
-            <h2 class="text-[20px] lg:text-[2vw] mb-[.5em] lg:mb-0">Sandhaimedu 2006</h2>
+            <h2 class="text-[20px] lg:text-[2vw] mb-[.5em] lg:mb-0">MacMillian Ave 2026</h2>
+          </div>
+          <div class="lg:max-w-[55vw] lg:px-[4vw]">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid veritatis illo, qui nemo expedita accusamus ex exercitationem, natus odio, aliquam quaerat perferendis. Neque cumque alias consequuntur, tenetur quia aliquid dolores. Lorem ipsum, dolor sit amet consectetur adipisicing
+              elit. Veniam alias minus est! Sunt, suscipit dolores laudantium magni nemo delectus blanditiis doloremque quae nihil quibusdam quis impedit quas in nostrum! Repellat?
+            </p>
+          </div>
+        </div>
+
+        <div class="w-full bg-white p-5">
+          <div>
+            <img src="img/macmillan _ave/A-001_Cover_Page.webp" alt="Alastair Upton Portfolio Image" class="w-full" />
+            <img src="img/macmillan _ave/A-101_Demolition.webp" alt="Alastair Upton Portfolio Image" class="w-full" />
+            <img src="img/macmillan _ave/A-102_Proposed_Layout.webp" alt="Alastair Upton Portfolio Image" class="w-full" />
+            <img src="img/macmillan _ave/A-103_Plumbing_Drainage.webp" alt="Alastair Upton Portfolio Image" class="w-full" />
+          </div>
+        </div>
+      </section>
+
+      <section id="kandy_garden">
+        <div class="flex flex-col lg:flex-row justify-between mt-10 lg:mt-[8vw] mb-5 md:mb-10 lg:mb-[2vw] lg:items-end">
+          <div class="lg:max-w-[45vw]">
+            <h2 class="text-[20px] lg:text-[2vw] mb-[.5em] lg:mb-0">Kandy Crescent Garden 2025</h2>
+          </div>
+          <div class="lg:max-w-[55vw] lg:px-[4vw]">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid veritatis illo, qui nemo expedita accusamus ex exercitationem, natus odio, aliquam quaerat perferendis. Neque cumque alias consequuntur, tenetur quia aliquid dolores. Lorem ipsum, dolor sit amet consectetur adipisicing
+              elit. Veniam alias minus est! Sunt, suscipit dolores laudantium magni nemo delectus blanditiis doloremque quae nihil quibusdam quis impedit quas in nostrum! Repellat?
+            </p>
+          </div>
+        </div>
+
+        <div class="w-full bg-white lg:pb-5">
+          <div>
+            <img src="img/kandy_garden/kandy_before.webp" alt="Alastair Upton Portfolio Image" class="w-full p-5 lg:p-10" />
+            <img src="img/kandy_garden/from_street.webp" alt="Alastair Upton Portfolio Image" class="w-full p-5 lg:px-10 lg:pt-0" />
+          </div>
+          <div class="flex flex-col lg:flex-row px-5 items-start">
+            <img src="img/kandy_garden/IMG_0336.webp" alt="Alastair Upton Portfolio Image" class="w-full lg:w-[33.33%] pt-5 lg:p-5" />
+            <img src="img/kandy_garden/IMG_0339.webp" alt="Alastair Upton Portfolio Image" class="w-full lg:w-[33.33%] pt-5 lg:p-5" />
+            <img src="img/kandy_garden/IMG_0343.webp" alt="Alastair Upton Portfolio Image" class="w-full lg:w-[33.33%] pt-5 lg:p-5" />
+          </div>
+          <div class="flex flex-col lg:flex-row px-5 items-start">
+            <img src="img/kandy_garden/IMG_0337.webp" alt="Alastair Upton Portfolio Image" class="w-full lg:w-[50%] pt-5 lg:p-5" />
+            <img src="img/kandy_garden/18KandyGarden-3.webp" alt="Alastair Upton Portfolio Image" class="w-full lg:w-[50%] pt-5 lg:p-5" />
+          </div>
+        </div>
+      </section>
+
+      <section id="greenhouse">
+        <div class="flex flex-col lg:flex-row justify-between mt-10 lg:mt-[8vw] mb-5 md:mb-10 lg:mb-[2vw] lg:items-end">
+          <div class="lg:max-w-[45vw]">
+            <h2 class="text-[20px] lg:text-[2vw] mb-[.5em] lg:mb-0">Greenhouse 2024</h2>
+          </div>
+          <div class="lg:max-w-[55vw] lg:px-[4vw]">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid veritatis illo, qui nemo expedita accusamus ex exercitationem, natus odio, aliquam quaerat perferendis. Neque cumque alias consequuntur, tenetur quia aliquid dolores. Lorem ipsum, dolor sit amet consectetur adipisicing
+              elit. Veniam alias minus est! Sunt, suscipit dolores laudantium magni nemo delectus blanditiis doloremque quae nihil quibusdam quis impedit quas in nostrum! Repellat?
+            </p>
+          </div>
+        </div>
+
+        <div class="w-full bg-white">
+          <div class="flex flex-col lg:flex-row px-5 lg:p-10 lg:pb-5 items-start">
+            <img src="img/greenhouse/IMG_0355.webp" alt="Alastair Upton Portfolio Image" class="w-full lg:w-[50%] pt-5 lg:p-0" />
+            <img src="img/greenhouse/greenhouse.gif" alt="Alastair Upton Portfolio Image" class="w-full lg:w-[50%] pt-5 lg:p-0" />
+          </div>
+          <div class="lg:px-5">
+            <img src="img/greenhouse/IMG_0092.webp" alt="Alastair Upton Portfolio Image" class="w-full px-5" />
+            <img src="img/greenhouse/IMG_0093.webp" alt="Alastair Upton Portfolio Image" class="w-full p-5 lg:py-10" />
+          </div>
+        </div>
+      </section>
+
+      <section id="sandhaimedu">
+        <div class="flex flex-col lg:flex-row justify-between mb-5 md:mb-10 lg:mb-[2vw] mt-10 lg:mt-[8vw] lg:items-end">
+          <div class="lg:max-w-[45vw]">
+            <h2 class="text-[20px] lg:text-[2vw] mb-[.5em] lg:mb-0">Sandhaimedu 2008</h2>
           </div>
           <div class="lg:max-w-[55vw] lg:px-[4vw]">
             <p>
@@ -64,7 +142,7 @@
       <section id="wakefield_quay">
         <div class="flex flex-col lg:flex-row justify-between mt-10 lg:mt-[8vw] mb-5 md:mb-10 lg:mb-[2vw] lg:items-end">
           <div class="lg:max-w-[45vw]">
-            <h2 class="text-[20px] lg:text-[2vw] mb-[.5em] lg:mb-0">Wakefield Quay 2008</h2>
+            <h2 class="text-[20px] lg:text-[2vw] mb-[.5em] lg:mb-0">Wakefield Quay 2006</h2>
           </div>
           <div class="lg:max-w-[55vw] lg:px-[4vw]">
             <p>
@@ -74,19 +152,19 @@
           </div>
         </div>
 
-        <div class="w-full bg-white pb-5">
+        <div class="w-full bg-white pb-5 lg:pb-10">
           <div>
-            <img src="img/wakefield_quay/P1000750.webp" alt="Alastair Upton Portfolio Image" class="w-full p-10" />
-            <img src="img/wakefield_quay/P1000749.webp" alt="Alastair Upton Portfolio Image" class="w-full pt-0 p-10" />
+            <img src="img/wakefield_quay/P1000750.webp" alt="Alastair Upton Portfolio Image" class="w-full p-5 lg:p-10" />
+            <img src="img/wakefield_quay/P1000749.webp" alt="Alastair Upton Portfolio Image" class="w-full px-5 lg:px-10" />
           </div>
-          <div class="flex flex-col lg:flex-row px-5 items-start">
+          <div class="flex flex-col lg:flex-row px-5 lg:pt-10 items-start">
             <img src="img/wakefield_quay/td01.webp" alt="Alastair Upton Portfolio Image" class="w-full lg:w-[50%] pt-5 lg:p-5" />
             <img src="img/wakefield_quay/td02.webp" alt="Alastair Upton Portfolio Image" class="w-full lg:w-[50%] pt-5 lg:p-5" />
           </div>
 
-          <div class="flex flex-col lg:flex-row px-5 items-start">
-            <img src="img/wakefield_quay/P1000743.webp" alt="Alastair Upton Portfolio Image" class="w-full lg:w-[33%] pt-5 lg:p-5" />
-            <img src="img/wakefield_quay/P1000747.webp" alt="Alastair Upton Portfolio Image" class="w-full lg:w-[66.66%] p-5" />
+          <div class="flex flex-col lg:flex-row px-5 lg:px-10 items-start">
+            <img src="img/wakefield_quay/P1000743.webp" alt="Alastair Upton Portfolio Image" class="w-full lg:w-[33.33%] pt-5 lg:pe-5" />
+            <img src="img/wakefield_quay/P1000747.webp" alt="Alastair Upton Portfolio Image" class="w-full lg:w-[66.66%] pt-5 lg:ps-5" />
           </div>
         </div>
       </section>
@@ -94,7 +172,7 @@
       <section id="don_edwards">
         <div class="flex flex-col lg:flex-row justify-between mt-10 lg:mt-[8vw] mb-5 md:mb-10 lg:mb-[2vw] lg:items-end">
           <div class="lg:max-w-[45vw]">
-            <h2 class="text-[20px] lg:text-[2vw] mb-[.5em] lg:mb-0">Don Edwards</h2>
+            <h2 class="text-[20px] lg:text-[2vw] mb-[.5em] lg:mb-0">Don Edwards 2005</h2>
           </div>
           <div class="lg:max-w-[55vw] lg:px-[4vw]">
             <p>
@@ -104,96 +182,18 @@
           </div>
         </div>
 
-        <div class="w-full bg-white pb-5">
+        <div class="w-full bg-white">
           <div class="flex flex-col items-center">
-            <img src="img/don_edwards/start_end.jpeg" alt="Alastair Upton Portfolio Image" class="w-full p-10" />
-            <img src="img/don_edwards/DonEdwardsOverview.gif" alt="Alastair Upton Portfolio Image" class="w-[80%] p-10 pt-0" />
+            <img src="img/don_edwards/start_end.jpeg" alt="Alastair Upton Portfolio Image" class="w-full p-5 lg:p-10" />
+            <img src="img/don_edwards/DonEdwardsOverview.gif" alt="Alastair Upton Portfolio Image" class="w-[80%] px-5" />
           </div>
 
           <div class="flex flex-col lg:flex-row px-5 items-start">
             <img src="img/don_edwards/seat_corner.webp " alt="Alastair Upton Portfolio Image" class="w-full lg:w-[50%] pt-5 lg:p-5" />
-            <img src="img/don_edwards/DonEdwardsDetail.gif " alt="Alastair Upton Portfolio Image" class="w-full lg:w-[50%] pt-5 lg:p-5" />
+            <img src="img/don_edwards/DonEdwardsDetail.gif " alt="Alastair Upton Portfolio Image" class="w-full lg:w-[50%] pt-5 lg:p-0" />
           </div>
           <div>
-            <img src="img/don_edwards/completed_installation.webp" alt="Alastair Upton Portfolio Image" class="w-full p-10" />
-          </div>
-        </div>
-      </section>
-
-      <section id="macmillian_ave">
-        <div class="flex flex-col lg:flex-row justify-between mt-10 lg:mt-[8vw] mb-5 md:mb-10 lg:mb-[2vw] lg:items-end">
-          <div class="lg:max-w-[45vw]">
-            <h2 class="text-[20px] lg:text-[2vw] mb-[.5em] lg:mb-0">MacMillian Ave</h2>
-          </div>
-          <div class="lg:max-w-[55vw] lg:px-[4vw]">
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid veritatis illo, qui nemo expedita accusamus ex exercitationem, natus odio, aliquam quaerat perferendis. Neque cumque alias consequuntur, tenetur quia aliquid dolores. Lorem ipsum, dolor sit amet consectetur adipisicing
-              elit. Veniam alias minus est! Sunt, suscipit dolores laudantium magni nemo delectus blanditiis doloremque quae nihil quibusdam quis impedit quas in nostrum! Repellat?
-            </p>
-          </div>
-        </div>
-
-        <div class="w-full bg-white pb-5">
-          <div>
-            <img src="img/macmillan _ave/A-001_Cover_Page.webp" alt="Alastair Upton Portfolio Image" class="w-full p-10" />
-            <img src="img/macmillan _ave/A-101_Demolition.webp" alt="Alastair Upton Portfolio Image" class="w-full p-10" />
-            <img src="img/macmillan _ave/A-102_Proposed_Layout.webp" alt="Alastair Upton Portfolio Image" class="w-full p-10" />
-            <img src="img/macmillan _ave/A-103_Plumbing_Drainage.webp" alt="Alastair Upton Portfolio Image" class="w-full p-10" />
-          </div>
-        </div>
-      </section>
-
-      <section id="greenhouse">
-        <div class="flex flex-col lg:flex-row justify-between mt-10 lg:mt-[8vw] mb-5 md:mb-10 lg:mb-[2vw] lg:items-end">
-          <div class="lg:max-w-[45vw]">
-            <h2 class="text-[20px] lg:text-[2vw] mb-[.5em] lg:mb-0">Greenhouse</h2>
-          </div>
-          <div class="lg:max-w-[55vw] lg:px-[4vw]">
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid veritatis illo, qui nemo expedita accusamus ex exercitationem, natus odio, aliquam quaerat perferendis. Neque cumque alias consequuntur, tenetur quia aliquid dolores. Lorem ipsum, dolor sit amet consectetur adipisicing
-              elit. Veniam alias minus est! Sunt, suscipit dolores laudantium magni nemo delectus blanditiis doloremque quae nihil quibusdam quis impedit quas in nostrum! Repellat?
-            </p>
-          </div>
-        </div>
-
-        <div class="w-full bg-white pb-5">
-          <div class="flex flex-col lg:flex-row px-5 items-start">
-            <img src="img/greenhouse/IMG_0355.webp" alt="Alastair Upton Portfolio Image" class="w-full lg:w-[50%] pt-5 lg:p-5" />
-            <img src="img/greenhouse/greenhouse.gif" alt="Alastair Upton Portfolio Image" class="w-full lg:w-[50%] pt-5 lg:p-5" />
-          </div>
-          <div>
-            <img src="img/greenhouse/IMG_0092.webp" alt="Alastair Upton Portfolio Image" class="w-full p-10" />
-            <img src="img/greenhouse/IMG_0093.webp" alt="Alastair Upton Portfolio Image" class="w-full p-10" />
-          </div>
-        </div>
-      </section>
-
-      <section id="kandy_garden">
-        <div class="flex flex-col lg:flex-row justify-between mt-10 lg:mt-[8vw] mb-5 md:mb-10 lg:mb-[2vw] lg:items-end">
-          <div class="lg:max-w-[45vw]">
-            <h2 class="text-[20px] lg:text-[2vw] mb-[.5em] lg:mb-0">Kandy Crescent Garden</h2>
-          </div>
-          <div class="lg:max-w-[55vw] lg:px-[4vw]">
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid veritatis illo, qui nemo expedita accusamus ex exercitationem, natus odio, aliquam quaerat perferendis. Neque cumque alias consequuntur, tenetur quia aliquid dolores. Lorem ipsum, dolor sit amet consectetur adipisicing
-              elit. Veniam alias minus est! Sunt, suscipit dolores laudantium magni nemo delectus blanditiis doloremque quae nihil quibusdam quis impedit quas in nostrum! Repellat?
-            </p>
-          </div>
-        </div>
-
-        <div class="w-full bg-white pb-5">
-          <div>
-            <img src="img/kandy_garden/kandy_before.webp" alt="Alastair Upton Portfolio Image" class="w-full p-10" />
-            <img src="img/kandy_garden/IMG_0337.webp" alt="Alastair Upton Portfolio Image" class="w-full p-10" />
-          </div>
-          <div class="flex flex-col lg:flex-row px-5 items-start">
-            <img src="img/kandy_garden/IMG_0336.webp" alt="Alastair Upton Portfolio Image" class="w-full lg:w-[33.33%] pt-5 lg:p-5" />
-            <img src="img/kandy_garden/IMG_0339.webp" alt="Alastair Upton Portfolio Image" class="w-full lg:w-[33.33%] pt-5 lg:p-5" />
-            <img src="img/kandy_garden/IMG_0343.webp" alt="Alastair Upton Portfolio Image" class="w-full lg:w-[33.33%] pt-5 lg:p-5" />
-          </div>
-          <div class="flex flex-col lg:flex-row px-5 items-start">
-            <img src="img/kandy_garden/18KandyGarden-2.webp" alt="Alastair Upton Portfolio Image" class="w-full lg:w-[50%] pt-5 lg:p-5" />
-            <img src="img/kandy_garden/18KandyGarden-3.webp" alt="Alastair Upton Portfolio Image" class="w-full lg:w-[50%] pt-5 lg:p-5" />
+            <img src="img/don_edwards/completed_installation.webp" alt="Alastair Upton Portfolio Image" class="w-full p-5 lg:p-10 lg:pt-5" />
           </div>
         </div>
       </section>
